--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <title>Xenoblade X Data Tables</title>
   </head>
   <body>
-    <h2>Master Languages</h2>
-    <a href="https://xenoblade.github.io">US (English)</a><br>
-    <a href="https://xbjp.gitlab.io/xbx_jp/bdat/index.html">JP (Japanese/日本)</a><br>
-    <a href="xbx_bdat_html_fr/bdat/index.html">FR (French)</a><br>
-    <a href="xbx_bdat_html_ge/bdat/index.html">GE (German)</a><br>
-    <a href="xbx_bdat_html_it/bdat/index.html">IT (Italian)</a><br>
-    <a href="xbx_bdat_html_sp/bdat/index.html">SP (Spanish)</a><br>
+    <h1>EU Release Languages</h1>
+    <h2>	
+    <a href="xbx_bdat_html_fr/bdat/index.html"> • FR (French)</a><br>
+    <a href="xbx_bdat_html_ge/bdat/index.html"> • GE (German)</a><br>
+    <a href="xbx_bdat_html_it/bdat/index.html"> • IT (Italian)</a><br>
+    <a href="xbx_bdat_html_sp/bdat/index.html"> • SP (Spanish)</a><br>
+    <br>
+    <a href="https://xenoblade.github.io"> • US (English) [EXTERNAL LINK]</a><br>
+    <a href="https://xbjp.gitlab.io/xbx_jp/bdat/index.html"> • JP (Japanese/日本) [EXTERNAL LINK]</a><br>
+    <br>
+    <a href="DRP_AffixTableDl.html">US (English) - Skell Affix Table Regenerated</a><br>
+    </h2>
   </body>
 </html>
