--- a/xbx_bdat_html_sp/bdat/index.html
+++ b/xbx_bdat_html_sp/bdat/index.html
@@ -159,6 +159,7 @@
     <a href="common_local_us\DEF_PcList.html">DEF_PcList</a><br/>
     <a href="common_local_us\DRP_AffixSlotTable.html">DRP_AffixSlotTable</a><br/>
     <a href="common_local_us\DRP_AffixTable.html">DRP_AffixTable</a><br/>
+    <a href="common_local_us\DRP_AffixTableDl.html">DRP_AffixTable - Skell Affix Table Regenerated</a><br/>
     <a href="common_local_us\DRP_BoxTable.html">DRP_BoxTable</a><br/>
     <a href="common_local_us\DRP_BronzeBoxTable.html">DRP_BronzeBoxTable</a><br/>
     <a href="common_local_us\DRP_DlArmorTable_Gold.html">DRP_DlArmorTable_Gold</a><br/>
