--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="https://xenoblade.github.io"> • US (English) [EXTERNAL LINK]</a><br>
     <a href="https://xbjp.gitlab.io/xbx_jp/bdat/index.html"> • JP (Japanese/日本) [EXTERNAL LINK]</a><br>
     <br>
-    <a href="DRP_AffixTableDl.html">US (English) - Skell Affix Table Regenerated</a><br>
+    <a href="DRP_AffixTableDl.html"> • US (English) - Skell Affix Table Regenerated</a><br>
     </h2>
   </body>
 </html>
